--- a/HrWebApp/Views/Shared/_Layout.cshtml
+++ b/HrWebApp/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between mx-auto component">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between mr-2 component">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Jobs">Jobs</a>
@@ -41,20 +41,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Company" asp-action="Companies">Companies</a>
                             </li>
-
-                            <li class="nav-item dropdown d-block">
-                                  <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                                    My account
-                                  </a>
-
-                                  <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Profiles" asp-action="SignIn">Log in</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="profiles" asp-action="SignUpStudent">Registration</a></li>
-                                  </ul>                                
-                            </li>
-                            <li class="nav-item d-none">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Profiles" asp-action="CreateRecruiterAccount">Contact us</a>
-                            </li>
+                            <partial name="_LoginStatusPartial" />
                         </ul>
                 </div>
             </div>
