action for adding new user in the database done!

--- a/HrWebApp/Views/Shared/_LoginStatusPartial.cshtml
+++ b/HrWebApp/Views/Shared/_LoginStatusPartial.cshtml
@@ -12,12 +12,9 @@ else {
                  My account
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <li><a class="dropdown-item" asp-area="" asp-controller="Profiles" asp-action="SignIn">Log in</a></li>
-                    <li><a class="dropdown-item" asp-area="" asp-controller="profiles" asp-action="SignUpStudent">Registration</a></li>
+                    <li><a class="dropdown-item" asp-area="" asp-controller="Profiles" asp-action="SignIn">Log In</a></li>
+                    <li><a class="dropdown-item" asp-area="" asp-controller="profiles" asp-action="UserAccount">Registration</a></li>
                 </ul>                                
-            </li>
-            <li class="nav-item d-none">
-                <a class="nav-link text-dark" asp-area="" asp-controller="Profiles" asp-action="CreateRecruiterAccount">Contact us</a>
             </li>
         </ul>
 }
