--- a/HrWebApp/Views/Profiles/UserAccount.cshtml
+++ b/HrWebApp/Views/Profiles/UserAccount.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="UserAccount">
+        <form asp-action="CreateAccount" asp-controller="Profiles" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserEmail" class="control-label"></label>
@@ -19,12 +19,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="UserPassword" class="control-label"></label>
-                <input asp-for="UserPassword" class="form-control" type="password"/>
+                <input asp-for="UserPassword" class="form-control" type="password" id="pass" />
                 <span asp-validation-for="UserPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="UserConfirmationPassword" class="control-label"></label>
-                <input asp-for="UserConfirmationPassword" class="form-control" type="password" />
+                <input asp-for="UserConfirmationPassword" class="form-control" type="password" required id="confirm_pass" onkeyup="validate_password()" />
                 <span asp-validation-for="UserConfirmationPassword" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -36,7 +36,7 @@
                 <span asp-validation-for="UserCategoryId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" onclick="wrong_pass_alert()" />
             </div>
         </form>
     </div>
