Authentication users done and authorization page for students on the process

--- a/HrWebApp/Views/Shared/_LoginStatusPartial.cshtml
+++ b/HrWebApp/Views/Shared/_LoginStatusPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @if(User.Identity.IsAuthenticated) {
-    <form method="post" class="form-inline" asp-controller="" asp-action="">
+    <form method="post" class="form-inline" asp-controller="Profiles" asp-action="Logout">
         Welcome @User.Identity.Name
         <button type="submit" class="ml-2 btn btn-link">Logout</button>
     </form>   
