--- a/HrWebApp/Views/Student/Account.cshtml
+++ b/HrWebApp/Views/Student/Account.cshtml
@@ -8,7 +8,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Index" asp-controller="Student" method="post">
+            <form asp-action="ManageAccount" asp-controller="Student" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="row form_student_profile">
                     <div class="col-md">
