--- a/HrWebApp/Views/Profiles/SignIn.cshtml
+++ b/HrWebApp/Views/Profiles/SignIn.cshtml
@@ -1,18 +1,28 @@
 ﻿@model HrWebApp.Models.LoginModel
-@*
 
-*@
-@{
-}
-<div class="mb-3 row">
-    <label asp-for="Mail" class="col-sm-2 col-form-label"></label>
-    <div class="col-sm-10">
-      <input asp-for="Mail" type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
+<form method="post" asp-action="CreateConnection" asp-controller="Profiles">
+    <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+    <div class="form-group row">
+        <div class="col-2">
+            <label asp-for="Mail" class="col-sm-2 col-form-label"></label>
+        </div>
+        <div class="col-5">
+            <input asp-for="Mail" type="text" class="form-control-plaintext">
+        </div>
+        <span class="text-danger" asp-validation-for="Mail"></span>
     </div>
-  </div>
-  <div class="mb-3 row">
-    <label asp-for="Password" class="col-sm-2 col-form-label">Password</label>
-    <div class="col-sm-10">
-      <input asp-for="Password" type="password" class="form-control" id="inputPassword">
+    <div class="form-group row">
+        <div class="col-2">
+            <label asp-for="Password" class="col-sm-2 col-form-label">Password</label>
+        </div>
+        <div class="col-5">
+            <input asp-for="Password" type="password" class="form-control" id="inputPassword">
+        </div>
+        <span class="text-danger" asp-validation-for="Password"></span>
     </div>
-  </div>
+    <div class="form-group row">
+        <div class="col-5">
+            <input type="submit" class="btn btn-primary" value="Sign In">
+        </div>
+    </div>
+</form>
