--- a/HrWebApp/Views/Profiles/SignIn.cshtml
+++ b/HrWebApp/Views/Profiles/SignIn.cshtml
@@ -1,28 +1,35 @@
 ﻿@model HrWebApp.Models.LoginModel
 
 <form method="post" asp-action="CreateConnection" asp-controller="Profiles">
-    <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-    <div class="form-group row">
-        <div class="col-2">
-            <label asp-for="Mail" class="col-sm-2 col-form-label"></label>
+    <div class="card custom-card">
+        <div class="card-header bg-primary text-white">
+            <h2>Login Form</h2>
         </div>
-        <div class="col-5">
-            <input asp-for="Mail" type="text" class="form-control-plaintext">
-        </div>
-        <span class="text-danger" asp-validation-for="Mail"></span>
-    </div>
-    <div class="form-group row">
-        <div class="col-2">
-            <label asp-for="Password" class="col-sm-2 col-form-label">Password</label>
-        </div>
-        <div class="col-5">
-            <input asp-for="Password" type="password" class="form-control" id="inputPassword">
-        </div>
-        <span class="text-danger" asp-validation-for="Password"></span>
-    </div>
-    <div class="form-group row">
-        <div class="col-5">
-            <input type="submit" class="btn btn-primary" value="Sign In">
+        <div class="card-body">
+            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
+            <div class="form-group row">
+                <div class="col-2 mb-5">
+                    <label asp-for="Mail" class="w-100 col-form-label"></label>
+                </div>
+                <div class="col-5">
+                    <input asp-for="Mail" type="text" class="form-control">
+                </div>
+                <span class="text-danger" asp-validation-for="Mail"></span>
+            </div>
+            <div class="form-group row">
+                <div class="col-2">
+                    <label asp-for="Password" class="w-100 col-form-label">Password</label>
+                </div>
+                <div class="col-5">
+                    <input asp-for="Password" type="password" class="form-control" id="inputPassword">
+                </div>
+                <span class="text-danger" asp-validation-for="Password"></span>
+            </div>
+            <div class="form-group row mt-3">
+                <div class="col-5">
+                    <input type="submit" class="btn btn-primary" value="Sign In">
+                </div>
+            </div>
         </div>
     </div>
 </form>
