--- a/HrWebApp/Views/Recruiter/Index.cshtml
+++ b/HrWebApp/Views/Recruiter/Index.cshtml
@@ -10,7 +10,7 @@
             <p>
                 Easily recruit the best students and young graduates all over Europe.
             </p>
-            <a class="btn" role="button" data-bs-toggle="button" href="#solutions">Discover our solutions</a>
+            <a class="btn btn-outline-success btn-lg" role="button" href="#solutions">Discover our solutions</a>
         </div>
         <div class="w-50 m-auto">
             <p>
@@ -28,7 +28,7 @@
                 <h3>COMPANY PAGE AND JOB ADS</h3>
                 <p>Recruit through the largest network of universities in Europe</p>
                 <p>Choose the only 2-in-1 solution that enables you strengthen your employer brand and publish your job ads directly</p>
-                <a class="btn" role="button" data-bs-toggle="button"  asp-area="" asp-controller="" asp-action="">Find out more</a>
+                <a class="btn btn-primary btn-lg" asp-controller="Recruiter" asp-action="Company">Find out more</a>
             </div>
             <div class="w-75">
                 <img src="~/img/job-hiring.png" alt="Job Hiring" class="w-100"/>
@@ -39,7 +39,7 @@
                 <h1>Create your company page</h1>
                 <p><b>Stand out</b><br />Grab the attention of the new generation from the competitors with a company page that truly reflects your unique culture</p>
                 <p><b>Manage all your recruitment needs</b><br />Centralise all your employer branding communication and job postings in a single place</p>
-                <a class="btn" role="button" data-bs-toggle="button" asp-area="" asp-controller="" asp-action="">Recruiters Join us</a>
+                <a class="btn btn-primary btn-lg" asp-controller="Recruiter" asp-action="Company">Recruiters Join us</a>
             </div>
             <div class="w-50 m-auto">
                 <h1>Publish your job ads</h1>
