--- a/HrWebApp/Views/Student/Account.cshtml
+++ b/HrWebApp/Views/Student/Account.cshtml
@@ -1,4 +1,4 @@
-﻿@model HrWebApp.Models.CVitaeModel
+﻿@model HrWebApp.Models.StudentModel
 
 @{
     ViewData["Title"] = "Student Profile Form";
@@ -20,9 +20,9 @@
                     </div>
                     <div class="col-md">
                         <div class="form-floating">
-                                <input asp-for="SurName" class="form-control" id="floatingInputGrid1" placeholder="Mihadja" />
-                                <label asp-for="SurName" for="floatingInputGrid1"></label>
-                                <span asp-validation-for="SurName" class="text-danger"></span>
+                                <input asp-for="LastName" class="form-control" id="floatingInputGrid1" placeholder="Mihadja" />
+                                <label asp-for="LastName" for="floatingInputGrid1"></label>
+                                <span asp-validation-for="LastName" class="text-danger"></span>
                         </div>
                     </div>
                 </div>
