--- a/HrWebApp/Views/Shared/_Layout.cshtml
+++ b/HrWebApp/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="~/lib/select2/css/select2.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HrWebApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
 </head>
 <body>
     <header>
@@ -26,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Students</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Recruiter" asp-action="Index">Recruiters</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Recruiter">Recruiters</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -39,7 +40,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Jobs">Jobs</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Company" asp-action="Companies">Companies</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Companies">Companies</a>
                             </li>
                             <partial name="_LoginStatusPartial" />
                         </ul>
