--- a/HrWebApp/Views/Home/Index.cshtml
+++ b/HrWebApp/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="section-student_job_content text-center">
             <p>+10,000 jobs — <br />from the bottom to <br />first job</p>
             <p>HrWebApp, a new way to find to improve your skills.</p>
-            <a class="nav-link text-dark border-success bg-success" asp-area="" asp-controller="Home" asp-action="Job">Find a Job</a>
+            <a class="nav-link text-dark border-success bg-success" asp-area="" asp-controller="Home" asp-action="Jobs">Find a Job</a>
         </div>
         <div class="section-student_job_image">
             <img src="~/img/Steps-to-Finding-a-Job-Abroad.png" alt="Jobs"/>
@@ -21,7 +21,7 @@
             <p>Find your way to a new career</p>
             <p class="mx-1">Your journey is unique, just like you. Whether it's to discover a job you would never have thought of, or to find a company in which to thrive, we are here to help you.
                 Our goal? To ensure you find the career that matches your values.</p>
-            <a class="nav-link text-dark border-success bg-success" asp-area="" asp-controller="Home" asp-action="Company">Companies</a>
+            <a class="nav-link text-dark border-success bg-success" asp-area="" asp-controller="Home" asp-action="Companies">Companies</a>
         </div>
     </div>
 </div>
