--- a/HrWebApp/Views/Recruiter/FormJob.cshtml
+++ b/HrWebApp/Views/Recruiter/FormJob.cshtml
@@ -5,19 +5,19 @@
     ViewData["Title"] = "Job";
 }
 
-<h1>Create a job</h1>
+<div><i class="bi bi-wallet-fill"></i><h3>Create a job</h3></div>
 
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Job" asp-controller="Recruiter" method="post">
+<div class="recruiter-formJob">
+    <div>
+        <form asp-action="CreateJob" asp-controller="Recruiter" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group mb-2">
+            <div class="form-group mb-2 recruiter-formJob_companyName">
                 <label asp-for="CompanyId" class="control-label">Company Name</label>
                 <input asp-for="CompanyId" class="form-control" value="@Model.CompanyId"/>
                 <span asp-validation-for="CompanyId" class="text-danger"></span>
             </div>
-            <fieldset class="form-group border p-3">
+            <fieldset class="form-group border p-3 recruiter-formJob_jobDetails">
                 <legend class="w-auto px-2">
                     Job Details
                 </legend>
@@ -28,12 +28,12 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
+                    <textarea asp-for="Description" class="form-control" rows="3"></textarea>
                     <span asp-validation-for="Description" class="text-danger"></span>
                 </div>
                 <div class="form-group mb-2">
                     <label asp-for="Responsibilities" class="control-label"></label>
-                    <input asp-for="Responsibilities" class="form-control" />
+                    <textarea asp-for="Responsibilities" class="form-control" rows="4"></textarea>
                     <span asp-validation-for="Responsibilities" class="text-danger"></span>
                 </div>
                 <div class="form-group">
@@ -42,23 +42,22 @@
                     <span asp-validation-for="Salary" class="text-danger"></span>
                 </div>
             </fieldset>
-            <fieldset class="form-group border p-3">
+            <fieldset class="form-group border p-3 recruiter-formJob_jobRequirements">
                 <legend class="w-auto px-2">Requirements</legend>
                 <div class="form-group mb-2">
-                    <label asp-for="SkillId" class="control-label"></label>
-                    <select asp-for="SkillId" asp-items="@(new SelectList(Model.Skills, nameof(Skill.SkillId), nameof(Skill.SkillName)))"
+                    <label asp-for="IdSkills" class="control-label">Skills</label>
+                    <select asp-for="IdSkills" asp-items="@(new SelectList(Model.Skills, nameof(Skill.SkillId), nameof(Skill.SkillName)))"
                     multiple class="form-select js-example-basic-multiple w-100">
                         <option>
                             Choose an option
                         </option>
                     </select>
-                    <input asp-for="Responsibilities" class="form-control" />
-                    <span asp-validation-for="Responsibilities" class="text-danger"></span>
+                    <span asp-validation-for="IdSkills" class="text-danger"></span>
                 </div>
                 <div class="row mb-2">
                     <div class="form-group">
                         <label asp-for="StudyLevelId" class="control-label"></label>
-                        <Select asp-for="StudyLevelId" asp-items="@(new SelectList(Model.StudyLevels, nameof(Education.EducationId), nameof(Education.EducationName)))">
+                        <Select class="form-select" asp-for="StudyLevelId" asp-items="@(new SelectList(Model.StudyLevels, nameof(Education.EducationId), nameof(Education.EducationName)))">
                             <option>
                                 Please select one
                             </option>
@@ -78,7 +77,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="ContractId" class="control-label"></label>
-                    <Select asp-for="ContractId" asp-items="@(new SelectList(Model.Contracts, nameof(Contract.ContractId), nameof(Contract.ContractTitle)))">
+                    <Select class="form-select" asp-for="ContractId" asp-items="@(new SelectList(Model.Contracts, nameof(Contract.ContractId), nameof(Contract.ContractTitle)))">
                         <option>
                             Please select one
                         </option>
@@ -86,11 +85,6 @@
                     <span asp-validation-for="ContractId" class="text-danger"></span>
                 </div>
             </fieldset>
-            <div class="form-group">
-                <label asp-for="PublicationDate" class="control-label"></label>
-                <input asp-for="PublicationDate" class="form-control" />
-                <span asp-validation-for="PublicationDate" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
