--- a/HrWebApp/wwwroot/css/site.css
+++ b/HrWebApp/wwwroot/css/site.css
@@ -8,6 +8,15 @@ html {
   }
 }
 
+.btn-link {
+    border: none;
+    background-color: #0d74f3;
+    color: #fff;
+    font-weight: bolder;
+    width: 25%;
+    text-decoration: none;
+}
+
 html {
   position: relative;
   min-height: 100%;
@@ -27,7 +36,7 @@ header .actor {
 }
 
 header .component {
-    margin-left: 100px;
+    margin-left: 38%;
 }
 
 .section-student_job, .section-student_company {
@@ -105,12 +114,38 @@ header .component {
     font-family: "Bootstrap-icons";
 }
 
-.recruiter-formJob{
-    width:100%;
+.recruiter-formJob {
+    width: 100%;
+}
+.recruiter-company_body_jobs {
+    margin: auto;
+}
+.recruiter-company_body_jobs_element {
+    border: 1px solid #d5d3d3;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left:10%;
+    margin-right:10%;
+    width: 80%;
+    cursor: pointer;
+    padding: 30px;
+}
+
+    .recruiter-company_body_jobs_element:hover {
+        background-color: #b6ff00;
+    }
+
+.recruiter-company_body_jobs_element div:nth-child(n+1) {
+    color: #808080;
+    font-size: 14px;
+}
+
+.recruiter-company_body_jobs_element div:nth-child(4) {
+    font-size: 10px;
+    text-align: right;
 }
 
 .recruiter-formJob_companyName {
-
 }
 
 .recruiter-formJob_jobDetails, .recruiter-formJob_jobRequirements {
