--- a/HrWebApp/Views/Shared/_NavHeaderRecruiterPartial.cshtml
+++ b/HrWebApp/Views/Shared/_NavHeaderRecruiterPartial.cshtml
@@ -10,6 +10,9 @@
                 <li class="nav-item">
                     <a class="nav-link text-dark" asp-controller="Recruiter" asp-action="Account">Recruiters</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-dark" asp-controller="Recruiter" asp-action="Statistics">Statistics</a>
+                </li>
             </ul>
         </div>
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between mr-2 component">
