--- a/HrWebApp/Views/Recruiter/Account.cshtml
+++ b/HrWebApp/Views/Recruiter/Account.cshtml
@@ -3,15 +3,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
 <div class="recruiter-company">
     <div class="recruiter-company_header">
         <div class="recruiter-company_header_title">
             <div>
                 <h2>@Model.Name</h2>
             </div>
-            <div><a class="btn btn-secondary" href="@Model.Url">Visit the website</a></div>
+            <div><a class="btn btn-primary" href="@Model.Url">Visit the website</a></div>
         </div>
         <div class="recruiter-company_header_description">
             <div>
