--- a/HrWebApp/Views/Student/Account.cshtml
+++ b/HrWebApp/Views/Student/Account.cshtml
@@ -5,52 +5,55 @@
 }
 
 <div class="student-account">
-    <div class="student-account_names">
-        <div>@Model.FirstName <b>@Model.LastName</b></div>
-    </div>
-    <div class="student-account_contact>
-        <div>Phone number : @Model.PhoneNumber</div>
-        <div>Github profile: @Model.GitHubProfile</div>
-    </div>
-    <div class="student-account_experience">
-        <div>Experience : @Model.WorkExperience</div>
-        <div>Projects : @Model.NumberOfProjects</div>
-    </div>
-    <div class="student-account_educations">
-        <div>Educations</div>
-        @foreach (var item in Model.Educations)
-        {
-            <div>@item.EducationName</div>
-        }
-    </div>
-    <div class="student-account_skills">
-        <div>My skills</div>
-        @foreach (var item in Model.Skills)
-        {
-            <div>@item.SkillName</div>
-        }
-    </div>
-    <div class="student-account_languages">
-        <div>Languages</div>
-        @foreach (var item in Model.Languages)
-        {
-            <div>@item.LanguageName</div>
-        }
+    <h2>My Profile</h2>
+    <div class="student-account_content">
+        <div class="student-account_contact">
+            <div>@Model.FirstName <b>@Model.LastName</b></div>
+            <div>Phone number<br /><b>@Model.PhoneNumber</b></div>
+            <div>Github profile<br /><b>@Model.GitHubProfile</b></div>
+        </div>
+        <div class="student-account_educations">
+            <div><b>Educations</b></div>
+            @foreach (var item in Model.Educations)
+            {
+                <div>@item.EducationName</div>
+            }
+        </div>
+        <div class="student-account_skills">
+            <div><b>My skills</b></div>
+            @foreach (var item in Model.Skills)
+            {
+                <div>@item.SkillName</div>
+            }
+        </div>
+        <div class="student-account_languages">
+            <div><b>Languages</b></div>
+            @foreach (var item in Model.Languages)
+            {
+                <div>@item.LanguageName</div>
+            }
+        </div>
+        <div class="student-account_experience">
+            <div><b>Experience</b><br/>@Model.WorkExperience</div>
+            <div><b>Projects</b><br/>@Model.NumberOfProjects</div>
+        </div>
     </div>
     <hr />
     <h3>My Jobs</h3>
     <div class="student-account_jobs">
         @foreach (var item in Model.Vacancies)
         {
-            <div class="student-account_jobs_item">
-                <h3>@item.CompanyName</h3>
-                <h4>@item.JobTitle</h4>
-                <div>
-                    <div><span>@item.JobContract</span></div>
-                    <div><span>@item.JobLocation</span></div>
+            <a asp-controller="Home" asp-action="JobPage" asp-route-id="@item.JobId">
+                <div class="student-account_jobs_item">
+                    <h3>@item.CompanyName</h3>
+                    <h4>@item.JobTitle</h4>
+                    <div>
+                        <div><span>@item.JobContract</span></div>
+                        <div><span>@item.JobLocation</span></div>
+                    </div>
+                    <div><span>@item.PublicationTime</span></div>
                 </div>
-                <div><span>@item.PublicationTime</span></div>
-            </div>
+            </a>
         }
     </div>
 </div>
